--- a/overlay/packages/apps/Snap/res/values/qcomarrays.xml
+++ b/overlay/packages/apps/Snap/res/values/qcomarrays.xml
@@ -27,6 +27,9 @@
         <item>@string/pref_camera_hfr_entry_2x</item>
         <item>@string/pref_camera_hfr_entry_3x</item>
         <item>@string/pref_camera_hfr_entry_4x</item>
+        <item>@string/pref_camera_hfr_entry_hsr_60</item>
+        <item>@string/pref_camera_hfr_entry_hsr_90</item>
+        <item>@string/pref_camera_hfr_entry_hsr_120</item>
     </string-array>
 
     <string-array name="pref_camera_hfr_entryvalues" translatable="false">
@@ -34,6 +37,9 @@
         <item>hfr60</item>
         <item>hfr90</item>
         <item>hfr120</item>
+        <item>hsr60</item>
+        <item>hsr90</item>
+        <item>hsr120</item>
     </string-array>
 
 </resources>
